--- a/core/headlamp.yaml
+++ b/core/headlamp.yaml
@@ -22,7 +22,8 @@ spec:
       releaseName: headlamp
       valuesObject:
         extraManifests:
-          - apiVersion: traefik.io/v1alpha1
+          - |
+            apiVersion: traefik.io/v1alpha1
             kind: IngressRoute
             metadata:
               name: headlamp
