--- a/core/kyverno.yaml
+++ b/core/kyverno.yaml
@@ -15,6 +15,9 @@ spec:
     name: in-cluster
     namespace: kyverno
   syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
