--- a/core/kyverno/amd64-preference.yaml
+++ b/core/kyverno/amd64-preference.yaml
@@ -3,28 +3,31 @@ kind: ClusterPolicy
 metadata:
   name: prefer-amd64-nodes
 spec:
-  background: true
-  mutateExistingOnPolicyUpdate: true
+  validationFailureAction: Audit
+  background: false
   rules:
-    - name: prefer-amd64-arch
+    - name: prefer-amd64-if-no-scheduling-constraints
       match:
         any:
           - resources:
               kinds:
                 - Pod
-      exclude:
-        any:
-          - resources:
-              namespaces:
-                - kube-system
-                - kyverno
+      # Don't stomp on pods that already declare scheduling intent.
+      preconditions:
+        all:
+          - key: "{{ request.object.spec.nodeSelector || '' }}"
+            operator: Equals
+            value: ""
+          - key: "{{ request.object.spec.affinity || '' }}"
+            operator: Equals
+            value: ""
       mutate:
         patchStrategicMerge:
           spec:
             affinity:
               nodeAffinity:
                 preferredDuringSchedulingIgnoredDuringExecution:
-                  - weight: 100
+                  - weight: 80
                     preference:
                       matchExpressions:
                         - key: kubernetes.io/arch
