--- a/core/kyverno.yaml
+++ b/core/kyverno.yaml
@@ -24,14 +24,16 @@ spec:
   sources:
     - chart: kyverno
       repoURL: https://kyverno.github.io/kyverno/
-      targetRevision: 3.3.4
+      targetRevision: 3.6.1
       helm:
         releaseName: kyverno
-        values: |
+        valuesObject:
           config:
             preserve: false
           webhookLabels:
             app.kubernetes.io/managed-by: argocd
+
+
     - repoURL: https://github.com/patrickjmcd/k8s-argo.git
       targetRevision: main
       path: core/kyverno
