--- a/core/headlamp.yaml
+++ b/core/headlamp.yaml
@@ -21,6 +21,16 @@ spec:
     helm:
       releaseName: headlamp
       valuesObject:
+        config:
+          oidc:
+            clientID: headlamp
+            issuerURL: https://pocketid.x.pmcd.io
+            redirectURL: https://headlamp.x.pmcd.io/oidc-callback
+            scopes:
+              - openid
+              - profile
+              - email
+              - groups
         extraManifests:
           - |
             apiVersion: traefik.io/v1alpha1
