--- a/core/pocketid/.env.template
+++ b/core/pocketid/.env.template
@@ -1,3 +1,8 @@
 ENCRYPTION_KEY=${POCKETID_ENCRYPTION_KEY}
 TRUST_PROXY=true
-APP_URL=pocketid.x.pmcd.io
+APP_URL=https://pocketid.x.pmcd.io
+DB_PROVIDER=postgres
+DB_CONNECTION_STRING=postgresql://pocketid:${POCKETID_DB_PASSWORD}@${POSTGRES_ADDRESS}:5432/pocketid
+FILE_BACKEND=database
+KEYS_STORAGE=database
+MAXMIND_LICENSE_KEY=${MAXMIND_LICENSE_KEY}
