--- a/core/pocketid/deployment.yaml
+++ b/core/pocketid/deployment.yaml
@@ -10,6 +10,8 @@ spec:
   progressDeadlineSeconds: 600
   replicas: 1
   revisionHistoryLimit: 3
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       app.kubernetes.io/instance: pocketid
