fix: headlamp external secret

--- a/core/headlamp.yaml
+++ b/core/headlamp.yaml
@@ -24,7 +24,7 @@ spec:
           config:
             oidc:
               secret:
-                create: true
+                create: false
                 name: headlamp-oidc-secret
           extraManifests:
             - |
