fix: headlamp external secret

--- a/core/headlamp.yaml
+++ b/core/headlamp.yaml
@@ -23,6 +23,8 @@ spec:
         valuesObject:
           config:
             oidc:
+              secret:
+                create: false
               externalSecret:
                 enabled: true
                 name: headlamp-oidc-secret
