fix: grafana pvc

--- a/apps/mealie/.env.template
+++ b/apps/mealie/.env.template
@@ -7,4 +7,9 @@ POSTGRES_PASSWORD=${MEALIE_DB_PASSWORD}
 POSTGRES_DB=mealie
 POSTGRES_SERVER=${POSTGRES_ADDRESS}
 OPENAI_API_KEY=${OPENAI_API_KEY}
+OIDC_AUTH_ENABLED=True
+OIDC_SIGNUP_ENABLED=False
+OIDC_CONFIGURATION_URL=https://auth.pmcd.dev/.well-known/openid-configuration
+OIDC_CLIENT_ID=${MEALIE_OIDC_CLIENT_ID}
+OIDC_CLIENT_SECRET=${MEALIE_OIDC_CLIENT_SECRET}
 
