--- a/core/pocketid/.env.template
+++ b/core/pocketid/.env.template
@@ -1,6 +1,6 @@
 ENCRYPTION_KEY=${POCKETID_ENCRYPTION_KEY}
 TRUST_PROXY=true
-APP_URL=https://pocketid.x.pmcd.io
+APP_URL=https://auth.pmcd.dev
 DB_PROVIDER=postgres
 DB_CONNECTION_STRING=postgresql://pocketid:${POCKETID_DB_PASSWORD}@${POSTGRES_ADDRESS}:5432/pocketid
 FILE_BACKEND=database
