--- a/core/grafana.yaml
+++ b/core/grafana.yaml
@@ -28,6 +28,9 @@ spec:
             accessModes:
               - ReadWriteOnce
             size: 5Gi
+          grafana.ini:
+            server:
+              root_url: https://grafana.x.pmcd.io
 
     - repoURL: https://github.com/patrickjmcd/k8s-argo.git
       targetRevision: main
