--- a/core/prometheus.yaml
+++ b/core/prometheus.yaml
@@ -21,7 +21,7 @@ spec:
     - repoURL: https://github.com/patrickjmcd/k8s-argo.git
       targetRevision: main
       path: core/grafana-assets
-    - chart: prometheus
+    - chart: kube-prometheus-stack
       targetRevision: 27.52.0
       repoURL: https://prometheus-community.github.io/helm-charts
       helm:
