feat: kube-prometheus-stack

--- a/core/prometheus.yaml
+++ b/core/prometheus.yaml
@@ -27,6 +27,9 @@ spec:
       helm:
         releaseName: kube-prometheus-stack
         valuesObject:
+          crds:
+            updateJob:
+              enabled: true
           prometheus:
             prometheusSpec:
               retentionSize: 8GiB
