--- a/core/grafana-assets/ingressroute.yaml
+++ b/core/grafana-assets/ingressroute.yaml
@@ -2,7 +2,7 @@ apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: grafana
-  namespace: grafana
+  namespace: prometheus
 spec:
   entryPoints:
     - websecure
@@ -10,7 +10,7 @@ spec:
     - match: Host(`grafana.x.pmcd.io`)
       kind: Rule
       services:
-        - name: grafana
+        - name: kube-prometheus-stack-grafana
           port: 80
   tls:
     certResolver: pmcdio
