--- a/apps/unpoller/podmonitor.yaml
+++ b/apps/unpoller/podmonitor.yaml
@@ -2,6 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
   name: unifi-poller
+  namespace: default
   labels:
     app.kubernetes.io/instance: unpoller
     app.kubernetes.io/name: unpoller
