--- a/apps/unpoller/kustomization.yaml
+++ b/apps/unpoller/kustomization.yaml
@@ -2,7 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - deployment.yaml
-  - podmonitor.yaml
+  - service.yaml
+  - servicemonitor.yaml
 
 images:
   - name: unpoller
