--- a/core/prometheus.yaml
+++ b/core/prometheus.yaml
@@ -37,6 +37,7 @@ spec:
           prometheus:
             prometheusSpec:
               retentionSize: 8GiB
+              serviceMonitorSelectorNilUsesHelmValues: false
               serviceMonitorNamespaceSelector:
                 matchLabels:
                   prometheus: enabled
