feat: uptime-kuma servicemonitor

--- a/apps/uptime-kuma/servicemonitor.yaml
+++ b/apps/uptime-kuma/servicemonitor.yaml
@@ -11,6 +11,9 @@ spec:
         password:
           name: uptime-kuma-api-key
           key: password
+        username:
+          name: uptime-kuma-api-key
+          key: username
       port: http
       path: /metrics
   selector:
