--- a/core/grafana-assets/httproute.yaml
+++ b/core/grafana-assets/httproute.yaml
@@ -6,7 +6,9 @@ metadata:
   namespace: prometheus
 spec:
   parentRefs:
-    - name: traefik-gateway
+    - group: gateway.networking.k8s.io
+      kind: Gateway
+      name: traefik-gateway
       namespace: default
   hostnames:
     - grafana2.x.pmcd.io
@@ -17,5 +19,6 @@ spec:
             value: /
       backendRefs:
         - name: kube-prometheus-stack-grafana
+          kind: Service
           namespace: prometheus
           port: 80
