--- a/core/cert-manager.yaml
+++ b/core/cert-manager.yaml
@@ -16,11 +16,14 @@ spec:
     automated: { }
     syncOptions:
       - CreateNamespace=true
-  source:
-    chart: cert-manager
-    targetRevision: v1.19.2
-    repoURL: oci://quay.io/jetstack/charts/cert-manager
-    helm:
-      valuesObject:
-        crds:
-          enabled: true
+  sources:
+    - chart: cert-manager
+      targetRevision: v1.19.2
+      repoURL: oci://quay.io/jetstack/charts/cert-manager
+      helm:
+        valuesObject:
+          crds:
+            enabled: true
+    - path: core/cert-manager
+      repoURL: https://github.com/patrickjmcd/k8s-argo.git
+      targetRevision: main
