--- a/apps/homarr-assets/httproute.yaml
+++ b/apps/homarr-assets/httproute.yaml
@@ -3,7 +3,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: homarr-httproute
-  namespace: default
+  namespace: homarr
 spec:
   parentRefs:
     - group: gateway.networking.k8s.io
@@ -20,5 +20,5 @@ spec:
       backendRefs:
         - name: homarr
           kind: Service
-          namespace: default
+          namespace: homarr
           port: 7575
