feat: media httproute

--- a/apps/media/overseerr/chart/templates/httproute.yaml
+++ b/apps/media/overseerr/chart/templates/httproute.yaml
@@ -20,5 +20,5 @@ spec:
       backendRefs:
         - name: overseerr
           kind: Service
-          namespace: default
+          namespace: media
           port: 5055
