--- a/apps/media/lidarr/httproute.yaml
+++ b/apps/media/lidarr/httproute.yaml
@@ -19,5 +19,5 @@ spec:
       backendRefs:
         - name: lidarr
           kind: Service
-          namespace: default
+          namespace: media
           port: 80
