--- a/core/headlamp.yaml
+++ b/core/headlamp.yaml
@@ -30,21 +30,29 @@ spec:
                 name: headlamp-oidc-secret
           extraManifests:
             - |
-              apiVersion: traefik.io/v1alpha1
-              kind: IngressRoute
+              apiVersion: gateway.networking.k8s.io/v1
+              kind: HTTPRoute
               metadata:
-                name: headlamp
+                name: headlamp-httproute
+                namespace: default
               spec:
-                entryPoints:
-                  - websecure
-                routes:
-                  - match: Host(`headlamp.x.pmcd.io`)
-                    kind: Rule
-                    services:
+                parentRefs:
+                  - group: gateway.networking.k8s.io
+                    kind: Gateway
+                    name: traefik-gateway
+                    namespace: default
+                hostnames:
+                  - headlamp.x.pmcd.io
+                rules:
+                  - matches:
+                      - path:
+                          type: PathPrefix
+                          value: /
+                    backendRefs:
                       - name: headlamp
+                        kind: Service
+                        namespace: default
                         port: 80
-                tls:
-                  certResolver: pmcdio
             - |
               apiVersion: external-secrets.io/v1beta1
               kind: ExternalSecret
