--- a/core/dozzle/kustomization.yaml
+++ b/core/dozzle/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - deployment.yaml
-  - ingressroute.yaml
+  - httproute.yaml
   - rbac.yaml
   - service.yaml
 
