--- a/core/kubewall-assets/httproute.yaml
+++ b/core/kubewall-assets/httproute.yaml
@@ -1,9 +1,8 @@
-# HTTPRoute
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: grafana-httproute
-  namespace: prometheus
+  name: kubewall-httproute
+  namespace: default
 spec:
   parentRefs:
     - group: gateway.networking.k8s.io
@@ -11,14 +10,14 @@ spec:
       name: traefik-gateway
       namespace: default
   hostnames:
-    - grafana.x.pmcd.io
+    - kubewall.x.pmcd.io
   rules:
     - matches:
         - path:
             type: PathPrefix
             value: /
       backendRefs:
-        - name: kube-prometheus-stack-grafana
+        - name: kubewall
           kind: Service
-          namespace: prometheus
-          port: 80
+          namespace: default
+          port: 8443
