--- a/core/longhorn-assets/httproute.yaml
+++ b/core/longhorn-assets/httproute.yaml
@@ -1,9 +1,8 @@
-# HTTPRoute
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: grafana-httproute
-  namespace: prometheus
+  name: longhorn-httproute
+  namespace: longhorn-system
 spec:
   parentRefs:
     - group: gateway.networking.k8s.io
@@ -11,14 +10,14 @@ spec:
       name: traefik-gateway
       namespace: default
   hostnames:
-    - grafana.x.pmcd.io
+    - longhorn.x.pmcd.io
   rules:
     - matches:
         - path:
             type: PathPrefix
             value: /
       backendRefs:
-        - name: kube-prometheus-stack-grafana
+        - name: longhorn-frontend
           kind: Service
-          namespace: prometheus
+          namespace: longhorn-system
           port: 80
