--- a/core/traefik-assets/kustomization.yaml
+++ b/core/traefik-assets/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - httproute.yaml
   - storage.yaml
   - servicemonitor.yaml
 
