--- a/core/kubewall-assets/httproute.yaml
+++ b/core/kubewall-assets/httproute.yaml
@@ -2,7 +2,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: kubewall-httproute
-  namespace: default
+  namespace: kubewall
 spec:
   parentRefs:
     - group: gateway.networking.k8s.io
@@ -19,5 +19,5 @@ spec:
       backendRefs:
         - name: kubewall
           kind: Service
-          namespace: default
+          namespace: kubewall
           port: 8443
