--- a/core/traefik.yaml
+++ b/core/traefik.yaml
@@ -38,6 +38,15 @@ spec:
           service:
             spec:
               loadBalancerIP: 192.168.8.200
+          ingressRoute:
+            dashboard:
+              enabled: true
+              matchRule: Host(`traefik.x.pmcd.io`)
+              entryPoints:
+                - web
+                - websecure
+              tls:
+                certResolver: pmcdio
           providers:
             kubernetesGateway:
               enabled: true
