fix: 404 at the top

--- a/apps/glance/glance.yml
+++ b/apps/glance/glance.yml
@@ -19,8 +19,6 @@ pages:
               - url: https://awesomekling.github.io/feed.xml
               - url: https://ishadeed.com/feed.xml
                 title: Ahmad Shadeed
-              - url: ${RSS_404MEDIA}
-                title: 404 Media
 
           - type: monitor
             cache: 1m
@@ -31,6 +29,16 @@ pages:
 
       - size: full
         widgets:
+          - type: rss
+            limit: 10
+            collapse-after: 3
+            cache: 3h
+            style: horizontal-cards-2
+            feeds:
+              - url: ${RSS_404MEDIA}
+                title: 404 Media
+
+
           - type: hacker-news
 
           - type: videos
