--- a/apps/glance.yaml
+++ b/apps/glance.yaml
@@ -12,8 +12,10 @@ spec:
     namespace: default
     name: in-cluster
   project: apps
-  #  syncPolicy:
-  #    automated: { }
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
   source:
     path: apps/glance
     repoURL: https://github.com/patrickjmcd/k8s-argo.git
