--- a/core/cloudflared-tunnel/kustomization.yaml
+++ b/core/cloudflared-tunnel/kustomization.yaml
@@ -5,6 +5,11 @@ resources:
   - deployment.yaml
   - external-secret.yaml
 
+images:
+  - name: cloudflared
+    newName: cloudflare/cloudflared
+    newTag: 2025.11.1
+
 configMapGenerator:
   - name: cloudflared
     namespace: default
