--- a/core/cloudflared-tunnel/deployment.yaml
+++ b/core/cloudflared-tunnel/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: cloudflared
-          image: cloudflare/cloudflared:2024.1.5
+          image: cloudflared
           args:
             - tunnel
             # Points cloudflared to the config file, which configures what
@@ -26,6 +26,8 @@ spec:
             - /etc/cloudflared/config/config.yaml
             - --protocol
             - http2
+            - --metrics
+            - 0.0.0.0:2000
             - run
           livenessProbe:
             httpGet:
