--- a/core/cloudflared-tunnel.yaml
+++ b/core/cloudflared-tunnel.yaml
@@ -12,8 +12,10 @@ spec:
     namespace: default
     name: in-cluster
   project: core-components
-  #  syncPolicy:
-  #    automated: { }
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
   source:
     path: core/cloudflared-tunnel
     repoURL: https://github.com/patrickjmcd/k8s-argo.git
