--- a/core/cloudflared-tunnel/kustomization.yaml
+++ b/core/cloudflared-tunnel/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
 #  - configmap.yaml
   - deployment.yaml
   - external-secret.yaml
+  - podmonitor.yaml
 
 images:
   - name: cloudflared
