--- a/core/grafana-assets/httproute.yaml
+++ b/core/grafana-assets/httproute.yaml
@@ -21,5 +21,6 @@ spec:
         - name: kube-prometheus-stack-grafana
           kind: Service
           group: ''
+          weight: 1
           namespace: prometheus
           port: 80
